SUBDIRS = intl libiberty source po
EXTRA_DIST = BUGS TODO ChangeLog.0 ChangeLog.1 ChangeLog v9t9.gtkrc \
	AUTHORS ABOUT-NLS UPGRADING \
	rebuild.sh v9t9.simple.cnf version \
	v9t9.glade v9t9.glade-2

install-data-local:
	$(INSTALL_DATA) v9t9.gtkrc $(pkgdatadir)/v9t9.gtkrc
	$(INSTALL_DATA) v9t9.simple.cnf $(pkgdatadir)/v9t9.cnf


